--- a/BO3/bootstrap-ckeditor/bootstrap.ckeditor.css
+++ b/BO3/bootstrap-ckeditor/bootstrap.ckeditor.css
@@ -5,6 +5,7 @@
 	padding-left: 7px !important;
 	margin-right: auto;
 	margin-left: auto;
+	background-image: url(site-assets/images/block-container.png);
 }
 
 .container-fluid {
@@ -12,10 +13,12 @@
 	padding-left: 7px !important;
 	margin-right: auto;
 	margin-left: auto;
+	background-image: url(site-assets/images/block-container-fluid.png);
 }
 
 .row {
 	padding-bottom: 7px;
+	background-image: url(site-assets/images/block-row.png);
 }
 
 .btn-group-vertical>.btn-group:after, .btn-group-vertical>.btn-group:before, .btn-toolbar:after, .btn-toolbar:before, .clearfix:after, .clearfix:before, .container-fluid:after, .container-fluid:before, .container:after, .container:before, .dl-horizontal dd:after, .dl-horizontal dd:before, .form-horizontal .form-group:after, .form-horizontal .form-group:before, .modal-footer:after, .modal-footer:before, .modal-header:after, .modal-header:before, .nav:after, .nav:before, .navbar-collapse:after, .navbar-collapse:before, .navbar-header:after, .navbar-header:before, .navbar:after, .navbar:before, .pager:after, .pager:before, .panel-body:after, .panel-body:before, .row:after, .row:before {
@@ -23,7 +26,23 @@
 	content: " ";
 }
 
-.btn-group-vertical>.btn-group:after, .btn-toolbar:after, .clearfix:after, .container-fluid:after, .container:after, .dl-horizontal dd:after, .form-horizontal .form-group:after, .modal-footer:after, .modal-header:after, .nav:after, .navbar-collapse:after, .navbar-header:after, .navbar:after, .pager:after, .panel-body:after, .row:after {
+.btn-group-vertical>.btn-group:after, 
+.btn-toolbar:after, 
+.clearfix:after, 
+.container-fluid:after, 
+.container:after, 
+.dl-horizontal dd:after, 
+.form-horizontal 
+.form-group:after, 
+.modal-footer:after, 
+.modal-header:after, 
+.nav:after, 
+.navbar-collapse:after, 
+.navbar-header:after, 
+.navbar:after, 
+.pager:after, 
+.panel-body:after, 
+.row:after {
 	clear: both;
 }
 
@@ -50,166 +69,13 @@
 	padding-right: 15px !important;
 	padding-left: 15px !important;
 }
-.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
-	float: left;
-}
-.col-xs-12 {
-	width: 100%;
-}
-.col-xs-11 {
-	width: 91.66666667%;
-}
-.col-xs-10 {
-	width: 83.33333333%;
-}
-.col-xs-9 {
-	width: 75%;
-}
-.col-xs-8 {
-	width: 66.66666667%;
-}
-.col-xs-7 {
-	width: 58.33333333%;
-}
-.col-xs-6 {
-	width: 50%;
-}
-.col-xs-5 {
-	width: 41.66666667%;
-}
-.col-xs-4 {
-	width: 33.33333333%;
-}
-.col-xs-3 {
-	width: 25%;
-}
-.col-xs-2 {
-	width: 16.66666667%;
-}
-.col-xs-1 {
-	width: 8.33333333%;
-}
-.col-xs-pull-12 {
-	right: 100%;
-}
-.col-xs-pull-11 {
-	right: 91.66666667%;
-}
-.col-xs-pull-10 {
-	right: 83.33333333%;
-}
-.col-xs-pull-9 {
-	right: 75%;
-}
-.col-xs-pull-8 {
-	right: 66.66666667%;
-}
-.col-xs-pull-7 {
-	right: 58.33333333%;
-}
-.col-xs-pull-6 {
-	right: 50%;
-}
-.col-xs-pull-5 {
-	right: 41.66666667%;
-}
-.col-xs-pull-4 {
-	right: 33.33333333%;
-}
-.col-xs-pull-3 {
-	right: 25%;
-}
-.col-xs-pull-2 {
-	right: 16.66666667%;
-}
-.col-xs-pull-1 {
-	right: 8.33333333%;
-}
-.col-xs-pull-0 {
-	right: auto;
-}
-.col-xs-push-12 {
-	left: 100%;
-}
-.col-xs-push-11 {
-	left: 91.66666667%;
-}
-.col-xs-push-10 {
-	left: 83.33333333%;
-}
-.col-xs-push-9 {
-	left: 75%;
-}
-.col-xs-push-8 {
-	left: 66.66666667%;
-}
-.col-xs-push-7 {
-	left: 58.33333333%;
-}
-.col-xs-push-6 {
-	left: 50%;
-}
-.col-xs-push-5 {
-	left: 41.66666667%;
-}
-.col-xs-push-4 {
-	left: 33.33333333%;
-}
-.col-xs-push-3 {
-	left: 25%;
-}
-.col-xs-push-2 {
-	left: 16.66666667%;
-}
-.col-xs-push-1 {
-	left: 8.33333333%;
-}
-.col-xs-push-0 {
-	left: auto;
-}
-.col-xs-offset-12 {
-	margin-left: 100%;
-}
-.col-xs-offset-11 {
-	margin-left: 91.66666667%;
-}
-.col-xs-offset-10 {
-	margin-left: 83.33333333%;
-}
-.col-xs-offset-9 {
-	margin-left: 75%;
-}
-.col-xs-offset-8 {
-	margin-left: 66.66666667%;
-}
-.col-xs-offset-7 {
-	margin-left: 58.33333333%;
-}
-.col-xs-offset-6 {
-	margin-left: 50%;
-}
-.col-xs-offset-5 {
-	margin-left: 41.66666667%;
-}
-.col-xs-offset-4 {
-	margin-left: 33.33333333%;
-}
-.col-xs-offset-3 {
-	margin-left: 25%;
-}
-.col-xs-offset-2 {
-	margin-left: 16.66666667%;
-}
-.col-xs-offset-1 {
-	margin-left: 8.33333333%;
-}
-.col-xs-offset-0 {
-	margin-left: 0;
-}
 
 .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
 	float: left;
 }
+
+/* COLUMNS */
+
 .col-md-12 {
 	width: calc(100% - 36px);
 }
@@ -246,6 +112,9 @@
 .col-md-1 {
 	width: calc(8.33333333% - 36px);
 }
+
+/* PULL */
+
 .col-md-pull-12 {
 	right: 100%;
 }
@@ -286,6 +155,9 @@
 .col-md-pull-0 {
 	right: auto;
 }
+
+/* PUSH */
+
 .col-md-push-12 {
 	left: 100%;
 }
@@ -325,6 +197,9 @@
 .col-md-push-0 {
 	left: auto;
 }
+
+/* OFFSET */
+
 .col-md-offset-12 {
 	margin-left: 100%;
 }
