--- a/BO3/bootstrap-ckeditor/bootstrap.ckeditor.css
+++ b/BO3/bootstrap-ckeditor/bootstrap.ckeditor.css
@@ -242,46 +242,46 @@
 	background-image: url(site-assets/images/block-container.png) !important;
 }
 .cke_show_blocks .container-fluid {
-	background-image: url(site-assets/images/block-container-fluid.png);
+	background-image: url(site-assets/images/block-container-fluid.png) !important;
 }
 
 .cke_show_blocks .row {
-	background-image: url(site-assets/images/block-row.png);
+	background-image: url(site-assets/images/block-row.png) !important;
 }
 
 .cke_show_blocks .col-md-12 {
-	background-image: url(site-assets/images/block-col-12.png);
+	background-image: url(site-assets/images/block-col-12.png) !important;
 }
 .cke_show_blocks .col-md-11 {
-	background-image: url(site-assets/images/block-col-11.png);
+	background-image: url(site-assets/images/block-col-11.png) !important;
 }
 .cke_show_blocks .col-md-10 {
-	background-image: url(site-assets/images/block-col-10.png);
+	background-image: url(site-assets/images/block-col-10.png) !important;
 }
 .cke_show_blocks .col-md-9 {
-	background-image: url(site-assets/images/block-col-9.png);
+	background-image: url(site-assets/images/block-col-9.png) !important;
 }
 .cke_show_blocks .col-md-8 {
-	background-image: url(site-assets/images/block-col-8.png);
+	background-image: url(site-assets/images/block-col-8.png) !important;
 }
 .cke_show_blocks .col-md-7 {
-	background-image: url(site-assets/images/block-col-7.png);
+	background-image: url(site-assets/images/block-col-7.png) !important;
 }
 .cke_show_blocks .col-md-6 {
-	background-image: url(site-assets/images/block-col-6.png);
+	background-image: url(site-assets/images/block-col-6.png) !important;
 }
 .cke_show_blocks .col-md-5 {
-	background-image: url(site-assets/images/block-col-5.png);
+	background-image: url(site-assets/images/block-col-5.png) !important;
 }
 .cke_show_blocks .col-md-4 {
-	background-image: url(site-assets/images/block-col-4.png);
+	background-image: url(site-assets/images/block-col-4.png) !important;
 }
 .cke_show_blocks .col-md-3 {
-	background-image: url(site-assets/images/block-col-3.png);
+	background-image: url(site-assets/images/block-col-3.png) !important;
 }
 .cke_show_blocks .col-md-2 {
-	background-image: url(site-assets/images/block-col-2.png);
+	background-image: url(site-assets/images/block-col-2.png) !important;
 }
 .cke_show_blocks .col-md-1 {
-	background-image: url(site-assets/images/block-col-1.png);
+	background-image: url(site-assets/images/block-col-1.png) !important;
 }
