--- a/BO3/bootstrap-ckeditor/bootstrap.ckeditor.css
+++ b/BO3/bootstrap-ckeditor/bootstrap.ckeditor.css
@@ -306,50 +306,50 @@
 	background-image: url(site-assets/images/block-col-1.png) !important;
 }
 
-.sm-spacer150 {
+.cke_show_blocks .sm-spacer150 {
 	background-image: url(site-assets/images/block-spacer-150.png) !important;
 }
 
-.sm-spacer120 {
+.cke_show_blocks .sm-spacer120 {
 	background-image: url(site-assets/images/block-spacer-120.png) !important;
 }
 
-.sm-spacer90 {
+.cke_show_blocks .sm-spacer90 {
 	background-image: url(site-assets/images/block-spacer-90.png) !important;
 }
 
-.sm-spacer60 {
+.cke_show_blocks .sm-spacer60 {
 	background-image: url(site-assets/images/block-spacer-60.png) !important;
 }
 
-.sm-spacer30 {
+.cke_show_blocks .sm-spacer30 {
 	background-image: url(site-assets/images/block-spacer-30.png) !important;
 }
 
-.sm-spacer15 {
+.cke_show_blocks .sm-spacer15 {
 	background-image: url(site-assets/images/block-spacer-15.png) !important;
 }
 
-.sm-block150 {
+.cke_show_blocks .sm-block150 {
 	background-image: url(site-assets/images/block-block-150.png) !important;
 }
 
-.sm-block120 {
+.cke_show_blocks .sm-block120 {
 	background-image: url(site-assets/images/block-block-120.png) !important;
 }
 
-.sm-block90 {
+.cke_show_blocks .sm-block90 {
 	background-image: url(site-assets/images/block-block-90.png) !important;
 }
 
-.sm-block60 {
+.cke_show_blocks .sm-block60 {
 	background-image: url(site-assets/images/block-block-60.png) !important;
 }
 
-.sm-block30 {
+.cke_show_blocks .sm-block30 {
 	background-image: url(site-assets/images/block-block-30.png) !important;
 }
 
-.sm-block15 {
+.cke_show_blocks .sm-block15 {
 	background-image: url(site-assets/images/block-block-15.png) !important;
 }
